# opuhw

./: build.sh  meson.build  symbol_export.def
examples/: counter.cpp
hwlib/: arbiter.h  counter.h  opc.h  regbank.h  regbanks.h
tests/: arbiter.cpp  counter.cpp  regbank.cpp
